fix overflow

--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+}
 
 img {
     width: 100%;
@@ -5,4 +8,5 @@ img {
     vertical-align: middle;
     object-fit: cover;
 }
+
 
